@@ -21,7 +21,13 @@
     <pcl level="3e"/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>hp</manufacturer>
+      <model>deskjet 6122</model>
+      <description>hp deskjet 6122</description>
+      <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET</commandset>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
