@@ -1,3 +1,8 @@
+2006-12-11  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-DeskJet_6122.xml: Added IEEE 1284 information (RH
+	bug #191661).
+
 2006-12-05  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/HP-LaserJet_3200.xml: Added IEEE 1284 information (RH
